tests/golden/compile-pass/top_level_chunk_statement.rua
let value = 1;
println!("{}", value);
