tests/golden/compile-fail/type_binary_invalid.rua
fn main() {
    let value = true + 1;
}
